--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
 
@@ -42,7 +44,7 @@
   </head>
   <style>
     * {
-      font-family: "Montserrat", sans-serif;
+      font-family: "Raleway", sans-serif;
     }
   </style>
   <body>
